# Person-Reidentification-Siamese

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: checkpoints.yaml  dataset.yaml  inference.yaml  model.yaml  training.yaml  validation.yaml
results/: predictions_20250403_165740.npz
scripts/: analyze_predictions.py  explore_predictions.py  predict.py  predict.sh  prepare_data.py  train.py  train.sh  validate.py  validate.sh
src/inference/: predictor.py
src/models/: model.py
src/training/: evaluator.py  trainer.py
src/utils/: config.py  device.py  metrics.py  visualization.py
